# automatic_linux_network_repair

./: .dockerignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.appimage  HISTORY.md  LICENSE  README.md  compose.yml  justfile  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release.yml  test.yml
docs/: appimage.md  index.md  installation.md  offline_install.md  systemd_validation.md  usage.md
scripts/: install_just.py  make_env.py  prepare_wheelhouse.py  ruff_suite.py  run_cli.py  run_docker.py  validate_yaml.py
scripts/appimage/: AppRun  automatic_linux_network_repair.desktop  build_appimage.sh  entrypoint.sh
src/automatic_linux_network_repair/: __init__.py  __main__.py  cli.py  eth_repair_menu.py  systemd_panel.py  systemd_validation.py  wifi.py
src/automatic_linux_network_repair/eth_repair/: __init__.py  actions.py  cli.py  diagnostics.py  dns_config.py  logging_utils.py  menus.py  probes.py  repairs.py  shell.py  status.py  types.py
src/automatic_linux_network_repair/systemd_schemas/: __init__.py  systemd_schema_sample.json
tests/: __init__.py  helpers.py  test_actions.py  test_automatic_linux_network_repair.py  test_cli_app.py  test_diagnostics.py  test_main_entrypoint.py  test_menus.py  test_probes.py  test_repairs.py  test_shell_logging.py  test_side_effect_audit.py  test_systemd_panel.py  test_systemd_validation.py  test_wifi.py
