[project]
name = "automatic_linux_network_repair"
version = "0.3.1"
description = "Automatic Linux Network Repair"
readme = "README.md"
authors = [
  {name = "Richard Ward", email = "richard.ward637@outlook.com"}
]
maintainers = [
  {name = "Richard Ward", email = "richard.ward637@outlook.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "rich",
  "typer",
]
requires-python = ">=3.10,<3.15"

[project.optional-dependencies]
dev = [
    "black",  # formatting
    "coverage",  # coverage reporting
    "flake8",  # linting
    "ipdb",  # debugging
    "mypy",  # static typing
    "pyinstaller",  # packaging
    "pytest",  # testing
    "PyYAML",  # YAML parsing
    "ruff",  # linting
    "ty",  # type checking
]

[project.urls]
bugs = "https://github.com/JohnDoe6345789/automatic_linux_network_repair/issues"
changelog = "https://github.com/JohnDoe6345789/automatic_linux_network_repair/blob/master/changelog.md"
homepage = "https://github.com/JohnDoe6345789/automatic_linux_network_repair"

[project.scripts]
automatic_linux_network_repair = "automatic_linux_network_repair.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "EXE", # flake8-executable (shebangs and executable bits)
]
extend-select = [
    "W292", # ensure newline at end of file
]

[tool.uv]
package = true

# -------------------------------------------------------------------
# Poetry configuration (added)
# -------------------------------------------------------------------

[tool.poetry]
name = "automatic_linux_network_repair"
version = "0.1.3"
description = "Automatic Linux Network Repair"
readme = "README.md"
license = "MIT"
authors = ["Richard Ward <richard.ward637@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
rich = "*"
typer = "*"

[tool.poetry.group.dev.dependencies]
coverage = "*"
pytest = "*"
ruff = "*"
ty = "*"
ipdb = "*"
black = "*"
mypy = "*"
flake8 = "*"
pyinstaller = ">=6.3,<7"
PyYAML = "*"

[tool.poetry.scripts]
automatic_linux_network_repair = "automatic_linux_network_repair.cli:app"
ruff-suite = "scripts.ruff_suite:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
